Style updates minor, mainly in Kmaps

--- a/kmaps-app/src/main/ContentHeader/ContentHeader.scss
+++ b/kmaps-app/src/main/ContentHeader/ContentHeader.scss
@@ -67,6 +67,8 @@
     text-transform: uppercase;
     margin-right: 0;
     margin-left: 1rem;
+    font-size: 1.6rem;
+    line-height: 0.75;
     &:hover {
         cursor: default;
         text-decoration: none;
