--- a/kmaps-app/src/views/Kmaps/placesinfo.scss
+++ b/kmaps-app/src/views/Kmaps/placesinfo.scss
@@ -90,7 +90,7 @@
         list-style-type: none;
         padding-inline-start: 0;
         li {
-            line-height: 0.75;
+            /* line-height: 0.75; */
         }
         li::before {
             content: '';
