--- a/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
+++ b/kmaps-app/src/views/common/FeatureCard/FeatureCard.scss
@@ -314,6 +314,8 @@
 .shanti-field-caption {
     line-height: 1.3em;
     margin-bottom: 1.5em;
+    color: #000;
+    letter-spacing: 0.0175rem;
 }
 
 .shanti-field-uid span {
