--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -418,7 +418,7 @@
         }
     }
     & + .tab-content {
-        padding: 2rem 2rem 9rem;
+        padding: 2rem 2rem 9rem 2.5rem;
         background: #fff;
         border: 1px solid #ccc;
         border-radius: 1rem;
@@ -433,6 +433,7 @@
     &.places + .tab-content {
         .kmap-related h3 {
             margin-top: 2rem;
+            margin-top: 0;
             font-size: 1.35rem;
             font-weight: bold;
         }
