--- a/kmaps-app/src/views/css/NodeHeader.css
+++ b/kmaps-app/src/views/css/NodeHeader.css
@@ -9,12 +9,21 @@
 }
 
 .sui-relatedSubHeader {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
     font-style: italic;
     font-family: 'EB Garamond', serif;
     text-transform: capitalize;
     display: block;
     text-indent: 4.5rem;
+    font-weight: bold;
     color: #000;
     letter-spacing: 0.075rem;
+}
+.sui-relatedSubHeader::before {
+    content: '–';
+    display: inline-block;
+    color: #000;
+    position: relative;
+    bottom: 0.15rem;
+    margin-right: 0.5rem;
 }
