--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -184,9 +184,10 @@ ul.fancytree-container {
 
 .c-content__main__kmaps {
     .c-kmaptree {
-        border: none;
+        /* border: none;
         box-shadow: none;
-        background-color: transparent;
+        background-color: transparent; */
+
         .leafend .toggle-icon {
             color: transparent;
             font-size: 0;
