--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -32,8 +32,9 @@ a {
     /* cursor: default !important; */
 }
 button,
-[role='button'],
-[role='tab'] {
+[role='tab'],
+[role='pill'],
+[role='button'] {
     cursor: default !important;
 }
 
@@ -47,7 +48,9 @@ h3,
     font-family: $font-family-sans, sans-serif;
 }
 
-.bo {
+.bo,
+.u-bo {
+    font-size: 2rem;
     letter-spacing: normal !important;
     text-rendering: optimizeLegibility !important;
     font-family: 'Babelstone', 'Jomolhari-ID', 'Jomolhari', 'Noto Sans Tibetan',
@@ -741,7 +744,7 @@ header.terms
             cursor: default;
             background: transparent;
             font-size: 1.75rem;
-            transition: all 2mzs;
+            transition: all 0.2s;
             transform: scale(1);
             opacity: 0.5;
             .icon::before {
@@ -819,11 +822,6 @@ header.terms
             opacity: 0.25;
             transition: all 0.35s;
         }
-        &:-webkit-direct-focus {
-            outline-color: transparent;
-            outline-style: none;
-            outline-width: 0;
-        }
     }
     &:hover div::before {
         opacity: 0.6;
@@ -855,7 +853,7 @@ header.terms
     width: 100vw;
     text-align: center;
 }
-.u-search__noresults__header {
+.u-search__results__header {
     font-size: 1.6rem;
     white-space: nowrap;
     margin-top: 3rem;
