--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -324,7 +324,8 @@
         }
     }
     &.places + .tab-content {
-        .kmap-related h3 {
+        .kmap-related h3,
+        h3.head-related {
             margin-top: 2rem;
             margin-top: 0;
             font-size: 1.35rem;
@@ -359,10 +360,62 @@
         text-align: left;
     }
     .row > div {
-        padding-left: 0;
+        padding: 1rem 2rem 0 2rem;
     }
 }
 
 .kmap-related .md3 {
     min-width: 25rem;
 }
+
+.c-relplaces-list.places {
+    h2.row {
+        margin: 1rem 0 1rem -1.5rem;
+        font-family: 'Open Sans', 'Segoe UI', Tahoma, sans-serif;
+        font-weight: 600;
+        font-size: 1.45rem;
+    }
+}
+.kmap-related,
+.nodeHeader-summary,
+.l-content__main__wrap {
+    ul {
+        margin-right: 1rem;
+        margin-left: 0.75rem;
+        list-style-type: none;
+        padding-inline-start: 0;
+        li {
+            /* line-height: 0.75; */
+        }
+        li::before {
+            content: '';
+            display: inline-block;
+            width: 0.6rem;
+            height: 0.6rem;
+            border: 0.15rem solid #888;
+            margin-right: 0.75rem;
+            position: relative;
+            left: 0;
+            transform: rotate(45deg);
+        }
+    }
+    .nodeHeader-summary .head-related {
+        width: 100%;
+        margin: 1.5rem 1rem 0.25rem 0;
+        padding: 0.6rem 1rem 0.4rem 0;
+        font-weight: bold;
+        font-size: 1.45rem;
+        text-transform: uppercase;
+    }
+}
+/*
+.places .head-related {
+    border-left-color: $color-places;
+}
+.subjects .head-related {
+    border-left-color: $color-subjects;
+}
+.terms .head-related {
+    border-left-color: $color-terms;
+}
+*/
