--- a/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
+++ b/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
@@ -41,7 +41,7 @@
         span {
             width: 0.3rem;
             height: 4rem;
-            transform-origin: rotate(45);
+            transform: rotate(45deg);
             background-color: #999;
             position: relative;
             &::before {
@@ -119,8 +119,6 @@
             margin: auto 0;
             padding-left: 0;
             padding-right: 1.5rem;
-            margin-left: 2rem;
-            /*width: 50%;*/
 
             h2 {
                 font-size: 1.25rem;
@@ -160,7 +158,7 @@
             .link {
                 color: #eee;
                 background-color: #000;
-                border: 1px solid #888 !important;
+                border: 1px solid #444 !important;
                 border-radius: 0.25em;
                 background-clip: padding-box;
                 box-shadow: none;
@@ -171,14 +169,13 @@
                 padding: 0;
                 text-align: center;
                 margin: 3rem 3rem 0;
-                max-width: 25rem;
+                max-width: 20rem;
                 &:hover {
                     color: #fff;
-                    background-color: #202020;
+                    border-color: #aaa;
                 }
                 &:active {
-                    color: #fff;
-                    background-color: #000;
+                    border-color: #eee;
                 }
             }
 
