--- a/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
+++ b/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
@@ -100,6 +100,7 @@
         .c-foviewer__image {
             text-align: center;
             margin: 0 auto;
+            padding-left: 2rem;
         }
 
         .c-foviewer__image,
@@ -109,7 +110,6 @@
         .c-foviewer__image img {
             max-width: 100%;
             max-height: 400px;
-            margin-left: 2rem;
         }
 
         .c-foviewer__details {
@@ -156,9 +156,15 @@
             }
 
             .link {
+            }
+            .link a {
+                color: inherit;
+                display: block;
+                padding: 1rem;
+
                 color: #eee;
                 background-color: #000;
-                border: 1px solid #444 !important;
+                border: 1px solid #444;
                 border-radius: 0.25em;
                 background-clip: padding-box;
                 box-shadow: none;
@@ -166,27 +172,33 @@
                 font-size: 1.25rem;
                 text-transform: uppercase;
                 letter-spacing: 0.275rem;
-                padding: 0;
                 text-align: center;
                 margin: 3rem 3rem 0;
                 max-width: 20rem;
-                &:hover {
-                    color: #fff;
-                    border-color: #aaa;
-                }
-                &:active {
-                    border-color: #eee;
-                }
-            }
+                cursor: default;
 
-            .link a {
-                color: inherit;
-                display: block;
-                padding: 1rem;
                 span {
                     font-size: 1.4rem;
-                    position: relative;
-                    top: 0.2rem;
+                    &::before {
+                        position: relative;
+                        top: 0.2rem;
+                        left: -0.2rem;
+                        transition: all 0.35s;
+                    }
+                }
+                &:hover {
+                    color: #fff;
+                    border-color: #666;
+                    span::before {
+                        position: relative;
+                        left: 0.25rem;
+                    }
+                }
+                &:active {
+                    span::before {
+                        border-color: #888;
+                        left: -0.2rem;
+                    }
                 }
             }
             .kmaprow {
