--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -66,5 +66,8 @@
                 background-color: transparent;
             }
         }
+        &.btn:not(:disabled):not(.disabled) {
+            cursor: default;
+        }
     }
 }
