--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -18,6 +18,7 @@ ul.fancytree-container {
     /* min-height: calc(100vh - 36rem);
     max-height: calc(100vh - 36rem); */
     height: calc(100vh - 36rem);
+    width: 100%;
 }
 .l-column__search .c-kmaptree {
     /* min-height: calc(100vh - 13.25rem);
