--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -108,7 +108,7 @@
         color: #555;
     }
     &:not(.selected):hover {
-        border-color: transparent;
+        border-color: $color-mandala;
         color: #000;
     }
     &:not(.selected):active {
