--- a/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
+++ b/kmaps-app/src/views/common/FeatureFoldOutViewer.scss
@@ -11,7 +11,19 @@
 .sui-featureGallery-selectedImg:after {
     display: inline-block;
     width: 1rem;
-    border: 12px solid #555;
+    border: 12px solid #222;
+    content: '';
+    margin-left: 45%;
+    border-top: 0px;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+}
+.react-photo-gallery--gallery
+    #FoldOutViewer
+    ~ .sui-featureGallery-selectedImg:after {
+    display: inline-block;
+    width: 1rem;
+    border: 12px solid #222;
     content: '';
     margin-left: 45%;
     border-top: 0px;
@@ -36,7 +48,9 @@
         width: 5rem;
         height: 5rem;
         border: 0.1rem solid #444;
+        border-radius: 0 0 0 0.5rem;
         border-width: 0 0 0.1rem 0.1rem;
+        background-color: #292929;
 
         span {
             width: 0.3rem;
@@ -44,15 +58,48 @@
             transform: rotate(45deg);
             background-color: #999;
             position: relative;
+
             &::before {
                 content: '';
                 font-family: sans-serif;
                 color: transparent;
                 position: absolute;
-                left: 2rem;
-                top: 1rem;
+                left: 2.5rem;
+                top: 0.5rem;
                 z-index: 100;
                 display: inline-block;
+                width: 0.2rem;
+                height: 4rem;
+                background-color: #777;
+                transform: rotate(45deg);
+            }
+
+            &::after {
+                content: '';
+                position: absolute;
+                left: 2.5rem;
+                top: 0.5rem;
+                z-index: 100;
+                display: inline-block;
+                width: 0.2rem;
+                height: 4rem;
+                background-color: #777;
+                transform: rotate(315deg);
+            }
+        }
+        &:hover {
+            border-color: #777;
+            background-color: #393939;
+        }
+        &:hover span::before,
+        &:hover span::after {
+            background-color: #aaa;
+        }
+        &:active {
+            border-color: #555;
+            span::before,
+            span::after {
+                background-color: #ccc;
             }
         }
     }
@@ -76,7 +123,7 @@
 
             span {
                 display: inline-block;
-                padding-top: 4.5rem;
+                padding-top: 4.75rem;
             }
 
             &.prev {
@@ -94,6 +141,7 @@
             &:hover {
                 color: #ddd;
                 background-color: #393939;
+                border-color: #888;
             }
         }
 
@@ -103,9 +151,11 @@
             padding-left: 2rem;
         }
 
-        .c-foviewer__image,
+        .c-foviewer__image {
+            flex-basis: 60%;
+        }
         .c-foviewer__details {
-            /*  flex-basis: 50%;*/
+            flex-basis: 40%;
         }
         .c-foviewer__image img {
             max-width: 100%;
@@ -210,8 +260,7 @@
             }
             .icon::before {
                 color: #eee;
-                font-size: 1.6rem;
-                margin-right: 1.3rem;
+                margin-right: 1rem;
             }
         } /* end .c-foviewer__details */
     }
