Style updates minor kmaps adj

--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -104,8 +104,9 @@
         border-color: $color-mandala;
         color: #000 !important;
     }
+    &.active,
     &:active {
-        border-color: #aaa;
+        border-color: red !important;
     }
     &:hover,
     &:hover .icon::before {
