--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -1,4 +1,4 @@
-
+@import '../../index-variables'
 
 .l-site__wrap.texts
   overflow-x: hidden
@@ -101,11 +101,11 @@
 
   /* Embeds in Texts: images, av, texts, etc */
   figure.image, div.assetplayer, div.image-wrapper
-    margin: 0.5rem 1.5rem 0rem
+    margin: 0.5rem 1.5rem 0
     width: auto
 
   figure.image img, div.assetplayer iframe
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.8)
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.8)
 
   figure figcaption, div.assetplayer p.avcaption
     margin: 0.5rem 0 0
@@ -122,7 +122,7 @@
     font-weight: normal
 
   figure.center
-    margin: 12px 0px 12px 24%
+    margin: 12px 0 12px 24%
 
   .spinner-border-sm
     margin: -2px 6px 0 20px
@@ -259,18 +259,20 @@
       padding-left: 2.4rem
       padding-right: 1rem
 
-    h1, h2, h3, h4, h5, h6
-    /*font-size: 0.88em; */
+    /* h1, h2, h3, h4, h5, h6 */
 
-    h4, h5, h6
+    h4
+      font-size: 2rem
+
+    h5, h6
       margin-top: 30px
       margin-bottom: 5px
+      font-size: 1.75rem
 
   .shanti-texts-section-title
     margin-top: 1.5rem
     padding-top: 1rem
     margin-bottom: 0
-    font-weight: normal
     font-weight: 500
     line-height: 2.75rem
     color: #000
@@ -286,14 +288,12 @@
       background: #f4f4f4
       padding: 1.5rem 1rem 1.5rem 3.5rem
       line-height: 1.5em
-      margin-bottom: 0
       margin-left: -1rem
       font-weight: bold
       letter-spacing: 0.0375rem
       color: #444
       border-top: 0.5rem solid white
       border-bottom: 0.5rem solid white
-      box-shadow: inset 0 2px 0.1rem 0 #ddd
       box-shadow: inset 0 0 0.1rem 0.1rem #ddd
       position: relative
       top: 1rem
@@ -322,7 +322,7 @@
       padding-bottom: 0.75rem
 
   #shanti-texts-sidebar .tab-content
-    padding: 2rem 1.5rem
+    padding: 1.25rem 1.5rem
     overflow-y: scroll !important
     max-height: 54rem
     width: 100%
@@ -352,12 +352,8 @@
     border-left: 2px solid #ccc
     border-right: 1px solid #d0d0d0
 
-    > div:first-of-type
-  /*margin-top:-5rem; */
 
   #shanti-texts-sidebar
-    /* display:none; */
-
     /* INITIAL CONDITION to prevent showing un-tabbed content */
     padding: 2rem 0 0
     height: 84vh !important
@@ -379,8 +375,8 @@
     cursor: pointer
 
     .sidecol-toggle
-      margin: 0px
-      padding: 0px
+      margin: 0
+      padding: 0
       display: inline-block
       position: relative
       top: -3px
@@ -391,7 +387,7 @@
     width: 1.15rem
 
   #shanti-texts-body::-webkit-scrollbar-track, #shanti-texts-sidebar .tab-content::-webkit-scrollbar-track
-    border-radius: 0rem
+    border-radius: 0
     -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1)
 
   #shanti-texts-body::-webkit-scrollbar-thumb, #shanti-texts-sidebar .tab-content::-webkit-scrollbar-thumb
@@ -425,6 +421,13 @@
       max-width: 100%
       height: auto
 
+      float: left
+      margin: 0 2.5rem .5rem 0
+      border-radius: .5rem
+      border: 1px solid #ccc
+      padding: .75rem
+      box-shadow: inset 0 0 .5rem .1rem #ccc
+
     /* display:none; */
 
     .text-level-1 img
@@ -437,11 +440,8 @@
 
   #shanti-texts-sidebar
     .field
-      border-bottom: 1px solid #ccc
-      padding-bottom: 0.7rem
-      margin-bottom: 0.7rem
       display: block
-      border-bottom: 1px solid gray
+      border-bottom: 1px solid #ccc
       padding-bottom: 1em
       margin-bottom: 1em
 
@@ -1091,7 +1091,7 @@
 
     #shanti-texts-sidebar .tab-content
       position: absolute
-      top: 38px
+      top: 45px
       bottom: 0
       max-height: 100%
       border: 1px solid #ddd
@@ -1099,6 +1099,7 @@
       border-bottom: 1px solid #aaa
       border-top: none
       overflow-y: auto !important
+      padding-top: 0
 
       &::-webkit-scrollbar
         height: 0.7rem
@@ -1169,16 +1170,28 @@
 
   /* END (min-width: 992px) */
 
+  .nav-tabs
+    border-bottom: none
+
   .nav-tabs.nav-justified > a
     position: relative
-    /* top: -0.4rem*/
     font-size: 0.93em !important
     text-transform: uppercase
-    line-height: 1.32em
-    padding-top: 1.25rem
-    border-radius: 0.5rem 0.5rem 0 0
-    border: thin solid #CCC
-    border-bottom: none
+    line-height: 1.95em
+    padding-top: 1.3rem
+    border-radius: 0.75rem 0.75rem 0 0
+    background-color: #fff
+    border: .1rem solid #CCC
+
+    &:hover
+      border-color: #aaa
+      border-bottom-color: #fff
+    &.active
+      margin-bottom: -0.2rem
+      border-top: .3rem solid $color-texts
+      padding-top: 1.1rem
+      border-bottom-color: white
+      font-weight: bold
 
     &.active::before
       color: #555 !important
