Style update kmaps related viewer layout, incl tree view scroller height

--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -15,6 +15,7 @@
 .c-featurePager__resultSummary {
     float: left;
     margin-left: 0;
+    margin-bottom: 0.75rem;
     position: relative;
     top: 0.1rem;
     font-size: 1.35rem;
