--- a/kmaps-app/src/index.scss
+++ b/kmaps-app/src/index.scss
@@ -119,15 +119,19 @@ div.image-wrapper.center figcaption {
     margin-right: auto;
 }
 
-.btn-primary:not(:disabled):not(.disabled):active,
-.btn-primary:not(:disabled):not(.disabled).active,
-.show > .btn-primary.dropdown-toggle {
+.c-buttonGroup__viewMode .btn-primary:not(:disabled):not(.disabled):active,
+.c-buttonGroup__viewMode .btn-primary:not(:disabled):not(.disabled).active,
+.c-buttonGroup__viewMode .show > .btn-primary.dropdown-toggle {
     background: #fff;
     color: #000;
     cursor: default;
-    border-color: #6b77ea;
     border-top-width: 0.2rem;
     border-bottom-width: 0.2rem;
+}
+
+.c-buttonGroup__viewMode .btn:not(:disabled):not(.disabled) {
+    line-height: 2rem;
+    width: 3.5rem;
 }
 
 // --- JSON button on kmaps views
@@ -870,9 +874,9 @@ header.terms
 // View mode for content column
 .c-buttonGroup__viewMode {
     margin: 0 2rem 0 0;
-    float: right;
-    position: relative;
-    top: -6rem;
+    position: absolute;
+    top: 1rem;
+    right: 0;
     .btn-primary:not(:disabled):not(.disabled):active,
     .btn-primary:not(:disabled):not(.disabled).active {
         transform: scale(1.04);
