--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -1,8 +1,8 @@
 @import '../../../index-variables';
 
 .l-column__related {
-    height: 100vh;
-    margin: 0 0 0 -24rem;
+    height: 100%;
+    margin: 0 0 2rem -24rem;
     padding: 0;
     transition: margin, 0.3s;
     flex: none;
@@ -316,7 +316,7 @@
         }
     }
     & + .tab-content {
-        padding: 2rem 2rem 9rem 2.5rem;
+        padding: 2rem 2rem 4rem 2.5rem;
         background: #fff;
         border: 1px solid #ccc;
         border-radius: 1rem;
@@ -346,6 +346,9 @@
 }
 
 .c-relplaces-list.container-fluid {
+    .c-kmaptree {
+        height: 80vh;
+    }
     .c-featurePager__container.row {
         padding: 1rem;
         margin-left: -1.75rem;
@@ -360,9 +363,11 @@
             }
         }
     }
-    .c-featurePager__container.row > div {
-        width: 30%;
-        text-align: left;
+    .c-featurePager__container.row {
+        > div {
+            width: 30%;
+            text-align: left;
+        }
     }
     .row > div {
         padding: 1rem 2rem 0 2rem;
