--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -35,6 +35,7 @@ ul.fancytree-container {
     transition: width 0.4s;
     transition-delay: 0.5s;
     height: calc(100vh - 5rem);
+    height: 70vh;
 }
 .l-column__related .c-kmaptree:hover {
     width: 40rem;
