--- a/kmaps-app/src/views/Terms/TermsDefinitionsFilter/CustomSelect/CustomSelect.css
+++ b/kmaps-app/src/views/Terms/TermsDefinitionsFilter/CustomSelect/CustomSelect.css
@@ -54,6 +54,12 @@
     border-style: solid;
     border-color: #ccc;
     font-size: 1.15rem;
+
+    font-family: 'EB Garamond', serif;
+    font-size: 2rem;
+    font-style: italic;
+    letter-spacing: 0.075rem;
+    border-left: 0.8rem double #91693c;
 }
 .custSelect__trigger .custSelect__arrow {
     position: relative;
