--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -348,6 +348,7 @@
 .c-relplaces-list.container-fluid {
     .c-kmaptree {
         height: 80vh;
+        padding: 1.25rem 1rem 2rem 1.5rem;
     }
     .c-featurePager__container.row {
         padding: 1rem;
