--- a/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
+++ b/kmaps-app/src/views/common/FeaturePager/FeaturePager.scss
@@ -48,7 +48,7 @@
     margin-right: 1rem;
 }
 .c-pager__counterWrapper span {
-    padding: 0 0.2rem;
+    padding: 0;
     margin: 0;
     width: 15px;
 }
