--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -18,6 +18,7 @@
     min-height: 25px;
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 1.85rem;
 }
 
 .c-image__viewer {
@@ -144,6 +145,7 @@
             }
             &:active {
                 border-color: transparent;
+                border: 1px solid #fff;
             }
         }
 
